ARM: exynos: add pmu nodes to exynos5250 dts
This plumbs up the PMU on the A15s so that we can run perf.

BUG=chrome-os-partner:22742
TEST=run perf top

Change-Id: I64638b87e24f8dd7664063d0d5b672993dd1763e
Signed-off-by: Olof Johansson <olofj@chromium.org>
Reviewed-on: https://gerrit-int.chromium.org/20678
Reviewed-by: Sonny Rao <sonnyrao@google.com>
Commit-Ready: Olof Johansson <olofj@google.com>
Tested-by: Olof Johansson <olofj@google.com>
[sonnyrao: 3.8: remove a9 pmu compat string, fix conflicts]
Conflicts:
	arch/arm/boot/dts/exynos5250.dtsi
Reviewed-on: https://chromium-review.googlesource.com/180630
Commit-Queue: Sonny Rao <sonnyrao@chromium.org>
Tested-by: Sonny Rao <sonnyrao@chromium.org>

--- a/arch/arm/boot/dts/exynos5250.dtsi
+++ b/arch/arm/boot/dts/exynos5250.dtsi
@@ -129,6 +129,13 @@
 		};
 	};
 
+	pmu {
+		compatible = "arm,cortex-a15-pmu";
+		interrupts = <1 2>,
+			     <22 4>;
+		interrupt-parent = <&combiner>;
+	};
+
 	pinctrl_0: pinctrl@11400000 {
 		compatible = "samsung,exynos5250-pinctrl";
 		reg = <0x11400000 0x1000>;
@@ -139,6 +146,7 @@
 			interrupt-parent = <&gic>;
 			interrupts = <0 32 0>;
 		};
+
 	};
 
 	pinctrl_1: pinctrl@13400000 {
