UPSTREAM: ARM: tegra: add clock source of PMC to device trees
Adding the bindings of the clock source of PMC in DT.

Signed-off-by: Joseph Lo <josephl@nvidia.com>
Signed-off-by: Stephen Warren <swarren@nvidia.com>
(cherry picked from commit 7021d1220584ab1e6efd3d59da47b65674d9896a)
Signed-off-by: Olof Johansson <olofj@chromium.org>

--- a/arch/arm/boot/dts/tegra114-dalmore.dts
+++ b/arch/arm/boot/dts/tegra114-dalmore.dts
@@ -827,6 +827,19 @@
 		nvidia,invert-interrupt;
 	};
 
+	clocks {
+		compatible = "simple-bus";
+		#address-cells = <1>;
+		#size-cells = <0>;
+
+		clk32k_in: clock {
+			compatible = "fixed-clock";
+			reg=<0>;
+			#clock-cells = <0>;
+			clock-frequency = <32768>;
+		};
+	};
+
 	sdhci@78000400 {
 		cd-gpios = <&gpio 170 1>; /* gpio PV2 */
 		bus-width = <4>;
