--- a/arch/arm/boot/dts/exynos5250.dtsi
+++ b/arch/arm/boot/dts/exynos5250.dtsi
@@ -624,51 +624,61 @@
 	usbotg_pd: pd@0x10042E00 {
 		compatible = "samsung,exynos4210-pd";
 		reg = <0x10042E00 0x20>;
+		enable = <0x3>;
 	};
 
 	g2d_pd: pd@0x10042E40 {
 		compatible = "samsung,exynos4210-pd";
 		reg = <0x10042E40 0x20>;
+		enable = <0x3>;
 	};
 
 	efnand_pd: pd@0x10042E80 {
 		compatible = "samsung,exynos4210-pd";
 		reg = <0x10042E80 0x20>;
+		enable = <0x3>;
 	};
 
 	cssys_pd: pd@0x10042EA0 {
 		compatible = "samsung,exynos4210-pd";
 		reg = <0x10042EA0 0x20>;
+		enable = <0x3>;
 	};
 
 	secss_pd: pd@0x10042EC0 {
 		compatible = "samsung,exynos4210-pd";
 		reg = <0x10042EC0 0x20>;
+		enable = <0x3>;
 	};
 
 	rot_pd: pd@0x10042EE0 {
 		compatible = "samsung,exynos4210-pd";
 		reg = <0x10042EE0 0x20>;
+		enable = <0x3>;
 	};
 
 	jpeg_pd: pd@0x10042F40 {
 		compatible = "samsung,exynos4210-pd";
 		reg = <0x10042F40 0x20>;
+		enable = <0x3>;
 	};
 
 	hsi_pd: pd@0x10042F60 {
 		compatible = "samsung,exynos4210-pd";
 		reg = <0x10042F60 0x20>;
+		enable = <0x3>;
 	};
 
 	mcuiop_pd: pd@0x10042FA0 {
 		compatible = "samsung,exynos4210-pd";
 		reg = <0x10042FA0 0x20>;
+		enable = <0x3>;
 	};
 
 	sata_pd: pd@0x10042FC0 {
 		compatible = "samsung,exynos4210-pd";
 		reg = <0x10042FC0 0x20>;
+		enable = <0x3>;
 	};
 
 	gsc_pd: pd@0x10044000 {
