MALI: Wk 29 pre-release r4p0 TX011 DDK
Early release of the r4p0 version of part:
  TX011-SW-99002

Signed-off-by: David Garbett <David.Garbett@arm.com>

BUG=chrome-os-partner:28099
TEST=Built and ran for debug and release. Checked login page, general browsing
     and WebGL tests (including aquarium and many planets). Tested on Lucas and
     Peach Pit.

Change-Id: I45fe531d3a2bc95b14c833ffa860806c14f91c56
Reviewed-on: https://chromium-review.googlesource.com/170634
Reviewed-by: Daniel Kurtz <djkurtz@chromium.org>
Tested-by: Daniel Kurtz <djkurtz@chromium.org>
Commit-Queue: Daniel Kurtz <djkurtz@chromium.org>

--- a/drivers/gpu/arm/t6xx/kbase/Kconfig
+++ b/drivers/gpu/arm/t6xx/kbase/Kconfig
@@ -99,6 +99,9 @@ choice
 config MALI_PLATFORM_VEXPRESS
 	depends on ARCH_VEXPRESS && (ARCH_VEXPRESS_CA9X4 || ARCH_VEXPRESS_CA15X4)
 	bool "Versatile Express"
+config MALI_PLATFORM_VEXPRESS_VIRTEX7_40MHZ
+	depends on ARCH_VEXPRESS && (ARCH_VEXPRESS_CA9X4 || ARCH_VEXPRESS_CA15X4)
+	bool "Versatile Express w/Virtex7 @ 40Mhz"
 config MALI_PLATFORM_GOLDFISH
 	depends on ARCH_GOLDFISH
 	bool "Android Goldfish virtual CPU"
