arm: exynos5420: dt: add clock nodes to mfc/gsc power domains
Add clock nodes for oscillator clock, input clocks and parents of input
clocks to mfc/gsc power domain so that we can set/restore the input
clocks while powering on and powering off a domain.

BUG=chrome-os-partner:22253
TEST=Boot on peach. Test Video with S2R and see no drop in performance.

Change-Id: Ic45f64ba4199d705493b16f335efcbe8748c5add
Signed-off-by: Prathyush K <prathyush.k@samsung.com>
Reviewed-on: https://chromium-review.googlesource.com/167196
Tested-by: <prathyush@chromium.org>
Reviewed-by: Andrew Bresticker <abrestic@chromium.org>
Commit-Queue: Andrew Bresticker <abrestic@chromium.org>

--- a/arch/arm/boot/dts/exynos5420.dtsi
+++ b/arch/arm/boot/dts/exynos5420.dtsi
@@ -469,6 +469,8 @@
 	gsc_pd: pd@10044000 {
 		compatible = "samsung,exynos4210-pd";
 		reg = <0x10044000 0x20>;
+		clocks = <&clock 1>, <&clock 1032>, <&clock 1033>,  <&clock 1034>, <&clock 1035>;
+		clock-names = "oscclk", "pclk0", "clk0", "pclk1", "clk1";
 	};
 
 	isp_pd: pd@10044020 {
@@ -479,6 +481,8 @@
 	mfc_pd: pd@10044060 {
 		compatible = "samsung,exynos4210-pd";
 		reg = <0x10044060 0x20>;
+		clocks = <&clock 1>, <&clock 1030>, <&clock 1031>;
+		clock-names = "oscclk", "pclk0", "clk0";
 	};
 
 	g2d_pd: pd@10044100 {
