--- a/arch/arm/boot/dts/cros5250-common.dtsi
+++ b/arch/arm/boot/dts/cros5250-common.dtsi
@@ -465,6 +465,7 @@
 		num-slots = <1>;
 		supports-highspeed;
 		broken-cd;
+		non-removable;
 		fifo-depth = <0x80>;
 		card-detect-delay = <200>;
 		samsung,dw-mshc-ciu-div = <3>;
@@ -506,6 +507,7 @@
 		supports-highspeed;
 		broken-cd;
 		keep-power-in-suspend;
+		/* non-removable NOT set so mwifiex driver can use reset trick */
 		fifo-depth = <0x80>;
 		card-detect-delay = <200>;
 		samsung,dw-mshc-ciu-div = <3>;
