--- a/arch/arm/boot/dts/exynos5420-peach-pit.dtsi
+++ b/arch/arm/boot/dts/exynos5420-peach-pit.dtsi
@@ -319,6 +319,7 @@
 		bypass-smu;
 		supports-highspeed;	/* >= 25MHz */
 		supports-hs200-mode;	/* 200MHz */
+		non-removable;
 		fifo-depth = <0x40>;
 		card-detect-delay = <200>;
 		samsung,dw-mshc-ciu-div = <3>;
@@ -344,6 +345,7 @@
 		num-slots = <1>;
 		supports-highspeed;
 		keep-power-in-suspend;
+		/* non-removable NOT set so mwifiex driver can use reset trick */
 		broken-cd;
 		bypass-smu;
 		fifo-depth = <0x40>;
