arm: exynos5420: dt: add enable values to power domains
Add enable values to the required power domains where the enable value
is not the default value of 0x7.

BUG=chrome-os-partner:20127
TEST=Boot on Snow/Peach and test S2R.

Change-Id: I4efd26a49925563fe18de5208a5c0b1360d526d2
Signed-off-by: Prathyush K <prathyush.k@samsung.com>
Reviewed-on: https://chromium-review.googlesource.com/167464
Tested-by: <prathyush@chromium.org>
Reviewed-by: Andrew Bresticker <abrestic@chromium.org>
Commit-Queue: Andrew Bresticker <abrestic@chromium.org>

--- a/arch/arm/boot/dts/exynos5420.dtsi
+++ b/arch/arm/boot/dts/exynos5420.dtsi
@@ -459,11 +459,13 @@
 	isparm_pd: pd@10042480 {
 		compatible = "samsung,exynos4210-pd";
 		reg = <0x10042480 0x20>;
+		enable = <0x1>;
 	};
 
 	xusbxti_pd: pd@10043400 {
 		compatible = "samsung,exynos4210-pd";
 		reg = <0x10043400 0x20>;
+		enable = <0x1>;
 	};
 
 	gsc_pd: pd@10044000 {
