CHROMIUM: ARM: dts: Add hdmi regulators to spring
This patch sets up the hdmi regulators for spring.

BUG=chromium:250747
TEST=Tested on spring

Change-Id: I5d9b9010c17eb80001e2323a29d329a1d714be95
Signed-off-by: Sean Paul <seanpaul@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/167470
Reviewed-by: Vincent Palatin <vpalatin@chromium.org>

--- a/arch/arm/boot/dts/exynos5250-spring.dts
+++ b/arch/arm/boot/dts/exynos5250-spring.dts
@@ -644,9 +644,10 @@
 	};
 
 	hdmi {
-		vdd-supply = <&ldo8_reg>;
-		vdd_osc-supply = <&ldo10_reg>;
-		vdd_pll-supply = <&ldo8_reg>;
+		hdmi-en-supply = <&s5m_ldo8_reg>;
+		vdd-supply = <&s5m_ldo8_reg>;
+		vdd_osc-supply = <&s5m_ldo10_reg>;
+		vdd_pll-supply = <&s5m_ldo8_reg>;
 	};
 
 	sound {
