ARM: dts: Prepare for "-rev4" and "-rev5" snow by splitting snow dts
The "-rev4" snow board will have slightly different DRAM but is the
same as previous revisions from a kernel perspective.  It can share a
device tree with the older revs.  Note that it has a new U-Boot that
will know to pick a -rev4 device tree, so be nice and put the "-rev4"
compatible string in (though it's not strictly compatible).

The "-rev5" snow board will have a few minor component changes from
the old snow boards and will eventually need tweaks in the device
tree.  Pave the way for this new board changes by adding a "-rev5"
device tree for snow.  The U-Boot on this new board will know to pick
the -rev5 device tree.  At the moment the "-rev5" device tree is
identical to the "-rev4" device tree, but we will soon start adding
differences.

This change will need a future (non-dts) change to start testing for
"google,snow-any".

See (Ib6cbe84b0d038d256b0a18b123886bec1dccf8a0 and
If8568fb26cfba1b75e8a104a2811e3c415401412) for new U-Boot CLs.

BUG=chrome-os-partner:22591
TEST=With .90.2 U-Boot, dmesg | head => "Google Snow Rev 0-4"
TEST=With rev4 U-Boot, dmesg | head => "Google Snow Rev 0-4"
TEST=With new U-Boot, dmesg | head => "Google Snow Rev 5+"

Change-Id: Ic18760429396d92c6328dbbadcd66610006bf9d7
Signed-off-by: Doug Anderson <dianders@chromium.org>
Previously-Reviewed-on: https://chromium-review.googlesource.com/167484
Reviewed-on: https://chromium-review.googlesource.com/170841
Reviewed-by: Vincent Palatin <vpalatin@chromium.org>
Reviewed-by: Katie Roberts-Hoffman <katierh@chromium.org>

--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -44,7 +44,8 @@ dtb-$(CONFIG_ARCH_EXYNOS) += exynos4210-origen.dtb \
 	exynos4210-trats.dtb \
 	exynos4412-smdk4412.dtb \
 	exynos5250-smdk5250.dtb \
-	exynos5250-snow.dtb \
+	exynos5250-snow-rev4.dtb \
+	exynos5250-snow-rev5.dtb \
 	exynos5250-spring.dtb \
 	exynos5420-peach-kirby.dtb \
 	exynos5420-peach-pit-rev3.dtb \
