Copy peach_pit's basic device tree to peach_kirby.
This is not quite enough to get a login prompt on the serial console,
but root appears to sometimes mount.

BUG=chrome-os-partner:22458
TEST=Build and boot USB stick on kirby.

Change-Id: I8f505e17e5b5b42a93e72c3f8c299b94ec4c5959
Signed-off-by: Bryan Freed <bfreed@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/167936

--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -46,6 +46,7 @@ dtb-$(CONFIG_ARCH_EXYNOS) += exynos4210-origen.dtb \
 	exynos5250-smdk5250.dtb \
 	exynos5250-snow.dtb \
 	exynos5250-spring.dtb \
+	exynos5420-peach-kirby.dtb \
 	exynos5420-peach-pit-rev3.dtb \
 	exynos5420-peach-pit-rev4.dtb \
 	exynos5420-peach-pit-rev5.dtb \
