--- a/arch/arm/boot/dts/exynos5420-peach-pit.dtsi
+++ b/arch/arm/boot/dts/exynos5420-peach-pit.dtsi
@@ -25,6 +25,21 @@
 		};
 	};
 
+	lcd_display_timings: display-timings {
+		native-mode = <&timing0>;
+		timing0: 1366x768 {
+			clock-frequency = <70589280>;
+			hactive = <1366>;
+			vactive = <768>;
+			hfront-porch = <40>;
+			hback-porch = <40>;
+			hsync-len = <32>;
+			vback-porch = <10>;
+			vfront-porch = <12>;
+			vsync-len = <6>;
+		};
+	};
+
 	/* hsi2c7 */
 	hsi2c@12CD0000 {
 		ps8625-bridge@48 {
@@ -36,6 +51,7 @@
 			use-external-pwm;
 			pinctrl-names = "default";
 			pinctrl-0 = <&ps8625_sleep &ps8625_reset>;
+			display-timings = <&lcd_display_timings>;
 		};
 	};
 
