--- a/arch/arm/boot/dts/exynos5250-spring.dts
+++ b/arch/arm/boot/dts/exynos5250-spring.dts
@@ -636,6 +636,21 @@
 		};
 	};
 
+	lcd_display_timings: display-timings {
+		native-mode = <&timing0>;
+		timing0: 1366x768 {
+			clock-frequency = <70589280>;
+			hactive = <1366>;
+			vactive = <768>;
+			hfront-porch = <40>;
+			hback-porch = <40>;
+			hsync-len = <32>;
+			vback-porch = <10>;
+			vfront-porch = <12>;
+			vsync-len = <6>;
+		};
+	};
+
 	i2c@12CD0000 {
 		ps8622-bridge@20 {
 			compatible = "parade,ps8622";
@@ -665,6 +680,7 @@
 			 * ----------+---------------------------+--------------
 			 */
 			power-seq-timing = <10 200 10 5 200 10 600>;
+			display-timings = <&lcd_display_timings>;
 		};
 
 		max98089: codec@10 {
