ARM: dts: Remove the SD controller and add in the USB 3.0 controllers.
Kirby doesn't have an SD controller and so shouldn't have one defined in the
device tree.

The USB 3.0 ports need two GPIOs enabled to enable their power, one for the
rail itself, and one for the buffer going to the ports. The kernel expects
there to be one GPIO per port and doesn't allow GPIOs to be shared, but what
we really need is to have a pair of gpios which are both shared between two
ports. Julius suggested that we connect one to each controller which satisfies
both constraint, but that means that if the kernel tries to power down either
port it will power down both. We believe it always controls them in tandem so
this should hopefully not be a problem. It's at least a reasonable first
solution.

BUG=None
TEST=Booted with this device tree on kirby. Plugged in USB 2 and USB 3 keys
and saw that each was recognized. The USB 3 key was recognized as a USB 2
device, but that's a problem for another day. Plugged in a USB network dongle
and saw that an IP was acquired successfully.

Change-Id: Ic89121c8f950038129b34d0b54d8c0d1194c8f19
Signed-off-by: Gabe Black <gabeblack@google.com>
Reviewed-on: https://chromium-review.googlesource.com/168507
Reviewed-by: David Hendrix <dhendrix@chromium.org>
Commit-Queue: Gabe Black <gabeblack@chromium.org>
Tested-by: Gabe Black <gabeblack@chromium.org>

--- a/arch/arm/boot/dts/exynos5420-peach-kirby.dtsi
+++ b/arch/arm/boot/dts/exynos5420-peach-kirby.dtsi
@@ -23,6 +23,22 @@
 		};
 	};
 
+	pinctrl@14010000 {
+		usb3_vbus0_en: usb30vbus0-en {
+			samsung,pins = "gph0-0";
+			samsung,pin-function = <1>;
+			samsung,pin-pud = <0>;
+			samsung,pin-drv = <0>;
+		};
+
+		usb3_vbus1_en: usb30vbus1-en {
+			samsung,pins = "gph0-5";
+			samsung,pin-function = <1>;
+			samsung,pin-pud = <0>;
+			samsung,pin-drv = <0>;
+		};
+	};
+
 	ramoops {
 		compatible = "ramoops";
 		reg = <0x41f00000 0x00100000>;
@@ -76,29 +92,19 @@
 		};
 	};
 
-	dwmmc2@12220000 {
-		status = "okay";
-		num-slots = <1>;
-		supports-highspeed;
-		fifo-depth = <0x40>;
-		card-detect-delay = <200>;
-		samsung,dw-mshc-ciu-div = <3>;
-		samsung,dw-mshc-sdr-timing = <2 3>;
-		samsung,dw-mshc-ddr-timing = <1 2>;
-		pinctrl-names = "default";
-		pinctrl-0 = <&sd2_clk &sd2_cmd &sd2_cd &sd2_bus4>;
-		slot@0 {
-			reg = <0>;
-			bus-width = <4>;
-			wp-gpios = <&gpc4 0 0>;
-		};
-	};
-
 	/* TODO: Add fimd, display port, etc */
 
 	/* i2s_0 */
 	i2s@03830000 {
 		status = "okay";
+	};
+
+	/* dw usb3_0 */
+	usb@12000000 {
+		status = "okay";
+		samsung,vbus-gpio = <&gph0 0 0>;
+		pinctrl-names = "default";
+		pinctrl-0 = <&usb3_vbus0_en>;
 	};
 
 	/* ehci */
@@ -109,6 +115,14 @@
 	/* ohci */
 	usb@12120000 {
 		status = "okay";
+	};
+
+	/* dw usb3_1 */
+	usb@12400000 {
+		status = "okay";
+		samsung,vbus-gpio = <&gph0 5 0>;
+		pinctrl-names = "default";
+		pinctrl-0 = <&usb3_vbus1_en>;
 	};
 
 	usb3_phy0: usbphy@12100000 {
