ARM: dts: Add write protect GPIO info to the kirby device tree.
BUG=chrome-os-partner:22458
TEST=Ran crossystem with and without the writeprotect pads shorted and saw
that the write protect value was as expected.

Change-Id: I4fcd39f18e6b4804b740953ca2423aa1d03bad3c
Signed-off-by: Gabe Black <gabeblack@google.com>
Reviewed-on: https://chromium-review.googlesource.com/168517
Reviewed-by: Gabe Black <gabeblack@chromium.org>
Tested-by: Gabe Black <gabeblack@chromium.org>
Commit-Queue: Gabe Black <gabeblack@chromium.org>

--- a/arch/arm/boot/dts/exynos5420-peach-kirby.dtsi
+++ b/arch/arm/boot/dts/exynos5420-peach-kirby.dtsi
@@ -16,6 +16,15 @@
 		bootargs = "";
 	};
 
+	firmware {
+		chromeos {
+			write-protect-gpio = <&gpx3 0 1>;
+
+			pinctrl-names = "default";
+			pinctrl-0 = <&wp_gpio>;
+		};
+	};
+
 	fixed-rate-clocks {
 		xxti {
 			compatible = "samsung,clock-xxti";
