ARM: dts: Add the TPM to the kirby device tree.
BUG=chrome-os-partner:22458
TEST=Built and booted on kirby.

Change-Id: Ib3233bda977d99b340a05b6889de3f545f4d3f55
Signed-off-by: Gabe Black <gabeblack@google.com>
Reviewed-on: https://chromium-review.googlesource.com/168519
Reviewed-by: Gabe Black <gabeblack@chromium.org>
Tested-by: Gabe Black <gabeblack@chromium.org>
Reviewed-by: David Hendrix <dhendrix@chromium.org>
Commit-Queue: Gabe Black <gabeblack@chromium.org>

--- a/arch/arm/boot/dts/exynos5420-peach-kirby.dtsi
+++ b/arch/arm/boot/dts/exynos5420-peach-kirby.dtsi
@@ -301,6 +301,21 @@
 		};
 	};
 
+	/* hsi2c9 */
+	hsi2c@12E10000 {
+		status = "okay";
+		clock-frequency = <400000>;
+
+		tpm@20 {
+			/* Unused irq; but still need to configure the pins */
+			pinctrl-names = "default";
+			pinctrl-0 = <&tpm_irq>;
+
+			compatible = "infineon,slb9645tt";
+			reg = <0x20>;
+		};
+	};
+
 	vbat: fixed-regulator {
 		compatible = "regulator-fixed";
 		regulator-name = "vbat-supply";
