--- a/arch/arm/boot/dts/exynos5420-peach-kirby.dtsi
+++ b/arch/arm/boot/dts/exynos5420-peach-kirby.dtsi
@@ -190,6 +190,29 @@
 		};
 	};
 
+	gpio-keys {
+		compatible = "gpio-keys";
+
+		pinctrl-names = "default";
+		pinctrl-0 = <&power_key_irq &lid_irq>;
+
+		power {
+			label = "Power";
+			gpios = <&gpx1 2 1>;
+			linux,code = <116>; /* KEY_POWER */
+			gpio-key,wakeup;
+		};
+
+		lid-switch {
+			label = "Lid";
+			gpios = <&gpx3 4 1>;
+			linux,input-type = <5>; /* EV_SW */
+			linux,code = <0>; /* SW_LID */
+			debounce-interval = <1>;
+			gpio-key,wakeup;
+		};
+	};
+
 	ramoops {
 		compatible = "ramoops";
 		reg = <0x41f00000 0x00100000>;
