ARM: dts: Add a backlight section to the kirby device tree.
It would be nice to validate that the backlight control is working properly
either by hooking up a display or an oscilloscope and modifying the backlight
setting.

BUG=chrome-os-partner:22458
TEST=Built and booted on kirby. Pushed the power button on servo briefly and
saw that the powerd process no longer exited and respawned.

Change-Id: Ia1a29f3e07a6f63576865ab68cc3ddf546703bc5
Signed-off-by: Gabe Black <gabeblack@google.com>
Reviewed-on: https://chromium-review.googlesource.com/168532
Reviewed-by: Gabe Black <gabeblack@chromium.org>
Tested-by: David Hendrix <dhendrix@chromium.org>
Commit-Queue: Gabe Black <gabeblack@chromium.org>

--- a/arch/arm/boot/dts/exynos5420-peach-kirby.dtsi
+++ b/arch/arm/boot/dts/exynos5420-peach-kirby.dtsi
@@ -365,6 +365,15 @@
 		regulator-always-on;
 	};
 
+	backlight {
+		compatible = "pwm-backlight";
+		pwms = <&pwm 0 1000000 0>;
+		max-brightness = <2800>;
+		default-brightness-level = <2800>;
+		pinctrl-0 = <&backlight_pwm>;
+		pinctrl-names = "default";
+	};
+
 	pinctrl@13400000 {
 		gpy7: gpy7 {
 			powerdown-settings = <3 3 3 3 3 3 6 2>;
