ARM: dts: Add trackpad info to kirby's device tree.
The language in the comments in this section was left intact even though it's
really intended for situations where we have more than one trackpad that we'll
probe for. I expect there's a decent change we'll have more than on trackpad
at some point, and this way we'll avoid rediscovering the problem mentioned in
the comments.

BUG=chrome-os-partner:22458
TEST=Built and booted on kirby.

Change-Id: Ie0cf7e57f203ebfbe9922579e6629d722dc3c60d
Signed-off-by: Gabe Black <gabeblack@google.com>
Reviewed-on: https://chromium-review.googlesource.com/168689
Reviewed-by: Gabe Black <gabeblack@chromium.org>
Commit-Queue: Gabe Black <gabeblack@chromium.org>
Tested-by: Gabe Black <gabeblack@chromium.org>

--- a/arch/arm/boot/dts/exynos5420-peach-kirby.dtsi
+++ b/arch/arm/boot/dts/exynos5420-peach-kirby.dtsi
@@ -541,6 +541,30 @@
 		};
 	};
 
+	/* hsi2c8 */
+	hsi2c@12E00000 {
+		status = "okay";
+		clock-frequency = <333000>;
+
+		/*
+		 * TODO: for now config the IRQ at the i2c level since
+		 * pinctrl can't handle sharing it between two children, even
+		 * if one fails to probe.
+		 * See crosbug.com/p/20329
+		 */
+		pinctrl-names = "default";
+		pinctrl-0 = <&i2c8_hs_bus &trackpad_irq>;
+
+		/* Only one of the following trackpads should be probed */
+		trackpad@4b {
+			reg = <0x4b>;
+			compatible = "atmel,atmel_mxt_tp";
+			interrupts = <1 0>;
+			interrupt-parent = <&gpx1>;
+			wakeup-source;
+		};
+	};
+
 	/* hsi2c9 */
 	hsi2c@12E10000 {
 		status = "okay";
